crates/ui/tests/it/snapshots/it__controller__help_bar_nintendo.snap
---
source: crates/ui/tests/controller.rs
expression: "rows(PadKind::Nintendo)"
---
Y danger zone: OFF · − auto-end: OFF
A select · X info · R next unit · ZL rewind · B menu · + end turn
