crates/ui/tests/it/snapshots/it__controller__help_bar_xbox.snap
---
source: crates/ui/tests/controller.rs
expression: "rows(PadKind::Xbox)"
---
X danger zone: OFF · Back auto-end: OFF
A select · Y info · RB next unit · LT rewind · B menu · Start end turn
